---
id: 3a98bd6a-5ada-485e-993d-7146a5d7282b
---
erDiagram
    Users {
        int id PK
        string first_name
        string last_name
        string email
        boolean is_teacher
        string password_hash
    }

    Courses {
        int id PK
        int teacher_id FK
        string title
        text description
        boolean is_visible
        boolean is_enrollable
        string image_url
    }

    Assignments {
        int id PK
        int course_id FK
        string title
        text description
        datetime due_date
        datetime created_at
    }

    AssignmentSubmissions {
        int user_id PK
        int assignment_id PK
        datetime submission_date
        float grade
        string submission_file_url
    }

    Enrollments {
        int user_id PK
        int course_id PK
        datetime enrollment_date
    }

    Files {
        int id PK
        int course_id FK
        string file_name
        string mime_type
        string gcs_url
        datetime upload_date
    }

    TextBlocks {
        int id PK
        int course_id FK
        string title
        text content
        datetime created_at
    }

    EnrollmentsEmailQueue {
        int id PK
        string recipient_email
        string subject
        text body
        string status
        datetime created_at
    }

    RegisterEmailQueue {
        int id PK
        string recipient_email
        string subject
        text body
        string status
        datetime created_at
    }

    %% Relaciones
    Users ||--o{ Courses : "manages"
    Users ||--o{ Enrollments : "enrolls"
    Users ||--o{ AssignmentSubmissions : "submits"
    
    Courses ||--o{ Enrollments : "has"
    Courses ||--o{ Assignments : "contains"
    Courses ||--o{ Files : "includes"
    Courses ||--o{ TextBlocks : "shows"
    
    Assignments ||--o{ AssignmentSubmissions : "receives"